# BidNet

./: .gitignore  README.md
compute_aware_bidding/: README.md  pyproject.toml
compute_aware_bidding/configs/: dense.yaml
compute_aware_bidding/scripts/: train.py
compute_aware_bidding/src/: __init__.py
compute_aware_bidding/src/data/: __init__.py  cifar10.py
compute_aware_bidding/src/models/: dense_model.py  experts.py  router.py
compute_aware_bidding/src/training/: __init__.py  metrics.py  trainer.py
compute_aware_bidding/src/utils/: __init__.py  config.py  device.py  logging.py  seed.py
