[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compute-aware-bidding"
version = "0.1.0"
description = "Minimal CIFAR-10 PyTorch baseline for Stage 1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "PyYAML",
]

[tool.setuptools]
include-package-data = true
